fixing z index to allow frontal placement

--- a/content.css
+++ b/content.css
@@ -22,7 +22,7 @@
 .ai-editor-modal {
     display: none;
     position: fixed;
-    z-index: 9999;
+    z-index: 99999999;
     left: 0;
     top: 0;
     width: 100%;
